# blogging-api

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/dependencies/: auth.py  common.py  posts.py  users.py
app/examples/: requests.py  responses.py
app/routers/: auth.py  posts.py  users.py
app/schemas/: auth.py  posts.py  users.py
app/services/: auth.py  posts.py  users.py
tests/: conftest.py  utils.py
tests/test_auth/test_authentication/: test_login.py  test_register.py
tests/test_auth/test_authorization/: test_token_verification.py
tests/test_posts/: test_post_creation.py  test_post_deleting.py  test_post_editing.py  test_post_retrieving.py  utils.py
tests/test_users/: test_profiles.py  utils.py
