[project]
name = "blogging-api"
version = "0.1.0"
description = "API to interact with simple blogging platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "fastapi-cli>=0.0.7",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "tinydb>=4.8.2",
]

[tool.mypy]
strict = true
